--- a/Datasheets/readme
+++ b/Datasheets/readme
@@ -1,1 +1,14 @@
-
+# The largest heading
+# Datasheet Descriptions
+| Datasheet Name | Part | Part Description|
+|--|--|--|
+| 21795E | 93AA66C-I/SN | 4Kbit EEPROM |
+| ESD5Z2.5T1-D | ESD5Z6.0T1G | Vbus ESD Protection |
+| LAN7800-Data-Sheet-DS00001992H | LAN7800/Y9X | USB 3.0 to Ethernet Converter IC
+| LTST-C191KGKT | LTST-C191KGKT | LED Indicator
+| MIC5528-High-Performance... | MIC5528-3.3YMT-T |  5V/3.3V 500mA LDO
+| crj007-mlg-th | CRJ007-MLG-TH |Gbit Ethernet Magjack Connector
+| sllses1d | HD3SS3220IRNHR | USB-C Superspeed 2:1 Mux
+| tpd4e05u06(1) | TPD4E05U06DQAR | 4 Channel ESD Protection
+| tpd6e05u06 | TPD6E05U06RVZR | 6 Channel ESD Protection
+| usb4080 | USB4080-03-A | USB-C SMD Full Connector
